[package]
name = "apod-og"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
scraper = "0.12"
cached = "0.24"
openssl = "0.10.28"
regex = "1.5.4"
json = "0.11.13"
chrono = "0.4.19"